# Kali-Tools-Manager

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  kalitools.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  GETTING_STARTED.md  GITHUB_UPLOAD.md  PROFILES.md
kalitools/: __init__.py  __main__.py  apt_catalog.py  cli.py  config.py  constants.py  doctor.py  history.py  http_util.py  manager.py  model.py  notifications.py  profiles.py  state.py  theme.py  ui.py
kalitools/data/: tools_merged.json
kalitools/data/profiles/: bug-bounty.json  ctf-basics.json  forensics-starter.json  osint-minimal.json  pentester-web.json
kalitools/tui/: __init__.py  app.py
kalitools_lib/: cache.py  github_metrics.py  scraping.py
man/: kalitools.1
tests/: __init__.py  test_apt_catalog.py  test_atomic_io.py  test_catalog_schema.py  test_cli.py  test_cli_smoke.py  test_config.py  test_model.py  test_popularity.py  test_profiles.py  test_rating_cache.py  test_scraping.py  test_scraping_fallbacks.py  test_security_regexes.py  test_state.py  test_theme.py
