[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalitools-app"
version = "0.1.0"
description = "Kali Tools Manager CLI"
authors = [{name = "Anthony"}]
requires-python = ">=3.8"
dependencies = [
  "rich>=13.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

